force-app/main/default/objects/lwrp__Field_Permission_Entry__c/lwrp__Field_Permission_Entry__c.object-meta.xml
<CustomObject>
    <description>Stores individual field permission entries for a permission snapshot. Each record represents a permission set or profile that had access to a specific deprecated field.</description>
    <label>Field Permission Entry</label>
    <nameField>
        <displayFormat>FPE-{0000000}</displayFormat>
        <label>Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Permission Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>