force-app/main/default/objects/lwrp__Field_Permission_Entry__c/fields/lwrp__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Object_Name__c</fullName>
    <description>The API name of the object containing the field.</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>