force-app/main/default/objects/lwrp__Field_Permission_Entry__c/fields/lwrp__Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Parent_Type__c</fullName>
    <description>Whether the parent is a Permission Set or Profile.</description>
    <label>Parent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PermissionSet</fullName>
                <label>Permission Set</label>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>