force-app/main/default/objects/lwrp__Field_Permission_Entry__c/fields/lwrp__Permissions_Edit__c.field-meta.xml
<CustomField>
    <fullName>lwrp__Permissions_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether edit permission was granted.</description>
    <label>Edit Permission</label>
    <type>Checkbox</type>
</CustomField>