force-app/main/default/objects/lwrp__Field_Permission_Entry__c/listViews/lwrp__All.listView-meta.xml
<ListView>
    <fullName>lwrp__All</fullName>
    <columns>NAME</columns>
    <columns>lwrp__Object_Name__c</columns>
    <columns>lwrp__Field_Name__c</columns>
    <columns>lwrp__Parent_Type__c</columns>
    <columns>lwrp__Parent_Name__c</columns>
    <columns>lwrp__Permissions_Read__c</columns>
    <columns>lwrp__Permissions_Edit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>